pagina web sencilla

--- a/index.html
+++ b/index.html
@@ -7,8 +7,33 @@
     <title>P.web1</title>
 </head>
 <body>
-<h1>P.web1</h1>
-<h2>subtitulo</h2>
-<h3>esto es un titulo 3</h3>   
+<h1>Que hem après</h1>
+<h2>Conceptes bàsics d'internet</h2>
+<ol>
+<li>HTTP Request</li>
+<li>Adreça IP</li>
+<li>Servidors</li>
+</ol>
+<h2>HTML</h2>
+<ul>
+    <li><h4>Hyper Text Markup Language</h4></li>
+    <li>Gran quantitat d'etiquetes</li> 
+    <ul>
+        <li>Boilerplate</li>
+            <ol>
+                <li>DOCTYPE</li>
+                <li>HTML</li>
+                <li>Head</li>
+                <ol>
+                    <li>Title</li>
+                </ol>
+                <li>Body</li>
+            </ol>
+        <li>Headers</li>
+        <li>Paràgrafs</li>
+        <li>em</li>
+        <li><h4>strong</h4></li>
+    </ul>
+</ul>
 </body>
 </html>
