--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </ol>
 <h2>HTML</h2>
 <ul>
-    <li><h4>Hyper Text Markup Language</h4></li>
+    <li><strong>Hyper Text Markup Language</strong></li>
     <li>Gran quantitat d'etiquetes</li> 
     <ul>
         <li>Boilerplate</li>
@@ -32,7 +32,7 @@
         <li>Headers</li>
         <li>Paràgrafs</li>
         <li>em</li>
-        <li><h4>strong</h4></li>
+        <li><strong>strong</strong></li>
     </ul>
 </ul>
 </body>
