--- a/web_sencilla_2.html
+++ b/web_sencilla_2.html
@@ -12,7 +12,7 @@
     <img src="/img/Rusty_Steele.jpg" alt="Rusty Steele">
     <h2>Some of my favorite places:</h2>
     <ul>
-        <li>The beach</li>letra cursiva html
+        <li>The beach</li>
         <li>The dog park</li>
         <li>The fire hydrant</li>
     </ul>
