--- a/web_sencilla_2.html
+++ b/web_sencilla_2.html
@@ -9,7 +9,7 @@
     <h1>Rusty Steele</h1>
     <br>Hi, I'm a dog. Woof!</br>
     <br>
-    <img src="/img/Rusty_Steele.jpg" alt="Rusty Steele">
+    <img src="img/Rusty_Steele.jpg" alt="Rusty Steele">
     <h2>Some of my favorite places:</h2>
     <ul>
         <li>The beach</li>
