--- a/registre.html
+++ b/registre.html
@@ -42,6 +42,7 @@
         <div>
             <input type="submit" value="Submit" name="submit"/>
         </div>
-    </form>    
+    </form>
+    <p><a href="index.html">Inicio</a></p>    
 </body>
 </html>
