--- a/segonaweb.html
+++ b/segonaweb.html
@@ -17,5 +17,6 @@
         <li>The fire hydrant</li>
     </ul>
     Make sure to follow me on <a href="https://www.instagram.com">Instagram</a>
+    <p><a href="index.html">Inicio</a></p>
 </body>
 </html>
