--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li><a href="taula.html">Taula</a></li>
         <li><a href="exerciciSelectors.html">ExerciciSelectors</a></li>
         <li><a href="registre.html">Registre</a></li>
-        <li><a href="/tresenratlla.html">Tresenratlla</a></li>
+        <li><a href="tresenratlla.html">Tresenratlla</a></li>
     </ul>   
 </body>
 </html>
