--- a/tres.html
+++ b/tres.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1024, initial-scale=1.0">
     <title>tresenratlla</title>
-    <link rel="stylesheet" type="text/css" href="css/tresenratlla.css">
+    <link rel="stylesheet" type="text/css" href="css/tres.css">
 </head>
 <body>
     <h1>3 en ratlla</h1>
