--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1024, initial-scale=1.0">
-    <title>Index</title>
+    <title>Index Salmeron</title>
 </head>
 <body>
     <h1>Trabajos Alejandro Salmeron</h1>
